--- a/p/pi/pic/pics-hosting.com.html
+++ b/p/pi/pic/pics-hosting.com.html
@@ -1,39 +1,34 @@
-<!--The following is the downloaded HTML source of the pics-hosting.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216165309id_/http%3A//pics-hosting.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pics-hosting.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616142412id_/http%3A//pics-hosting.com/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-gb" xml:lang="en-gb"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <meta http-equiv="Content-Language" content="en-gb">
 <meta http-equiv="imagetoolbar" content="no">
-<title>Pics-Hosting » More Information » Privacy Policy</title>
-<meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting">
-<meta name="description" content="Pics-Hosting is an easy image hosting solution for everyone.">
+<title>Share For Free Your Adult Pics With Pics-Hosting.com. Hotlinking Is Allowed On All Major Adult Boards !  </title>
+<meta name="keywords" content="adult pics hosting, hotlink, free image hoster, unlimited bandwidth">
+<meta name="description" content="Pics-Hosting allow hotlink on all major adult boards. Free reliable hosting for your porn images">
 <base href="http://pics-hosting.com/">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
 <link rel="shortcut icon" href="css/images/favicon.ico">
-<script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
 <script type="text/javascript" src="source/includes/genjscript.js"></script>
+
 </head>
 <body class="page_cell">
-<!-- begin Ad World Media for channel: Amateur , publisher: 3973 http://pics-hosting.com , Ad Dimension: Super Banner - 728 x 90 -->
-<script language="javascript">
-document.write('<iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2437;s=6703;d=14;w=728;h=90;p=6703" frameborder=0 marginheight=0 marginwidth=0 scrolling="no" allowTransparency="true" width=728 height=90></iframe>');
-</script><iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2437;s=6703;d=14;w=728;h=90;p=6703" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true" width="728" height="90"></iframe>
-<!-- end Ad World Media for channel: Amateur , publisher: 3973 http://pics-hosting.com , Ad Dimension: Super Banner - 728 x 90 -->
-
-	<div class="logo">&nbsp;</div>
+<script type="text/javascript" src="http://cluster.adultadworld.com/geopop/geoinject.js"></script><script type="text/javascript" language="javascript">displayBan('6703','', '2517', '1')</script>
+	<a href="http://pics-hosting.com/"><div class="logo">&nbsp;</div></a>
 
 	<div class="nav_menu">
 		<ul>
 			<li><a href="index.php">Home</a></li>
 			<li><a href="info.php?act=about_us">About Us</a></li>
-			<li><a href="info.php?act=rules">Terms of Service</a></li>
+			<li><a href="info.php?act=rules">Term of Services</a></li>
 			<li><a href="gallery.php">Public Gallery</a></li>
 			<li><a href="contact.php?act=file_report">Report Abuse</a></li>
 			<li><a href="index.php?do_random=true">Random Image</a></li>
-			<li><a href="http://trusted-meds-online.com/?ref_id=738" target="blank">BEST DRUGS</a></li>
-                     
+			<li><a href="drugs.php" target="blank">BEST DRUGS</a></li>
+                     <li><a href="webcams.php" target="blank"><span style="color: rgb(255, 255, 0);">Live Sex Cams</span></a></li>
 		</ul>
 	</div>
 	<div class="members_bar">
@@ -41,6 +36,11 @@ document.write('<iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607
 				Welcome Guest
 				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL3BpY3MtaG9zdGluZy5jb20vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'login_lightbox');">Log In</a> | 
 				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL3BpY3MtaG9zdGluZy5jb20vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'register_lightbox');">Register</a> )
+<span class="marge"><form action="search.php" method="get">
+            Search Images:
+            <input type="text" value="" name="query" class="input_field" style="width: 200px;">
+            <input type="submit" class="button1" value="Go">
+       </form></span>
 			</div>
 			</div>
 	
@@ -80,7 +80,7 @@ If you have any question, please do not hesitate to <a href="contact.php?act=con
 		</script>
 		<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
 		<!-- AddThis Bookmark Button END -->
-		| Page Views: 26,352,319
+		| Page Views: 47,077,177
 	</div>
 	<script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -91,11 +91,10 @@ var pageTracker = _gat._getTracker("UA-744184-4");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
+
 <!-- begin AdworldMedia publisher: 3973 http://pics-hosting.com , Ad Dimension: Bottom of Page - 780 x 260 --> <script language="javascript"> document.write('<iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2496;s=6703;d=22;w=780;h=260;p=6703" frameborder=0 marginheight=0 marginwidth=0 scrolling="no" allowTransparency="true" width=780 height=260></iframe>'); </script><iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2496;s=6703;d=22;w=780;h=260;p=6703" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true" width="780" height="260"></iframe><!-- end AdworldMedia publisher: 3973 http://pics-hosting.com , Ad Dimension: Bottom of Page - 780 x 260 -->
-<script>
-var id = '1859692';
-</script>
-<script src="http://seemygf.com/peel/seemygf-peel.js" type="text/javascript"></script>
+
+
 
 
 <!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008 Mihalism, Inc. (www.mihalism.com) --></body></html>
