--- a/p/pr/pro/pro-football-reference.com.html
+++ b/p/pr/pro/pro-football-reference.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pro-football-reference.com privacy policy that was archived on 2008-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080605103819id_/http%3A//www.sports-reference.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pro-football-reference.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616144435id_/http%3A//www.sports-reference.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Sports-Reference.com Privacy Policy</title>
@@ -20,10 +20,18 @@
 <p>    <b>Sites</b>:
     <a href="/about.shtml">About Sports Reference</a> |
     <a href="http://www.baseball-reference.com">Baseball</a> |
-    <a href="http://www.basketball-reference.com">Basketball</a> <br>
+    <a href="http://www.basketball-reference.com">Basketball</a> |
     <a href="http://www.pro-football-reference.com">Football</a> |
-    <a href="http://www.hockey-reference.com">Hockey</a> |
-    College Sports (coming in 2008)
+    <a href="http://www.hockey-reference.com/">Hockey</a> |
+    <a href="http://www.sports-reference.com/olympics/">Olympics</a> 
+<br>
+  <a href="jobs_2009.shtml">Jobs</a> |
+  <a href="about.shtml">About</a> |
+<a href="contact.shtml">Contact</a>  | 
+<a href="privacy.shtml">Privacy Policy</a> | 
+<a href="termsofuse.shtml">Terms &amp; Conditions</a> | 
+<a href="data_use.shtml">Use of Data</a>
+
 </p></div>
 <a href="/"><img src="logo.png" border="0" alt="Sports-Reference.com" height="73" width="316"></a>
 </div>
@@ -266,10 +274,11 @@ the Site before the change was made.
 <a href="about.shtml">About Sports Reference</a> &nbsp;|&nbsp;
 <a href="contact.shtml">Contact Sports Reference</a> &nbsp;|&nbsp;
 <a href="privacy.shtml">Privacy Policy</a> &nbsp;|&nbsp;
-<a href="termsofuse.shtml">Terms and Conditions</a>
+<a href="termsofuse.shtml">Terms and Conditions</a> &nbsp;|&nbsp;
+<a href="data_use.shtml">Use of Data</a>
 
 <br>
-  Copyright © 2000-2008 Sports Reference, LLC, All rights reserved.
+  Copyright © 2000-2009 Sports Reference, LLC, All rights reserved.
 </div>
 
 
@@ -281,6 +290,11 @@ the Site before the change was made.
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-1890630-6");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
 
 
 </body></html>
