--- a/t/te/tes/testquestionsandanswers.com.html
+++ b/t/te/tes/testquestionsandanswers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the testquestionsandanswers.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216021430id_/http%3A//www.testquestionsandanswers.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the testquestionsandanswers.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153255id_/http%3A//www.testquestionsandanswers.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/TQA.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -133,11 +133,11 @@
 					<div class="side_box">
 				<h3>Testimonials</h3>
 								<div class="testimonial">
-					<a href="/courses.html"><img src="http://media.nationalsafetycommission.com/testimonials/small/couple4.jpg" alt="" width="92" height="68"></a>					<p>"I passed (my Learner's Permit Test) the first time!  A great way to study.  Many thanks for your excellent course." <em>C.F., Florida</em></p>
+					<a href="/courses.html"><img src="http://media.nationalsafetycommission.com/testimonials/small/girl4.jpg" alt="" width="92" height="68"></a>					<p>"I have my learner’s permit and I owe it to your driver education website!  This is awesome!  Thank you, again!" <em>J.S., Birmingham, AL</em></p>
 					<br class="clear">
 				</div>
 								<div class="testimonial">
-					<a href="/courses.html"><img src="http://media.nationalsafetycommission.com/testimonials/small/girl2.jpg" alt="" width="92" height="68"></a>					<p>"Wow! This was awesome...If I pass, I owe it to this website!" <em>Christina, </em></p>
+					<a href="/courses.html"><img src="http://media.nationalsafetycommission.com/testimonials/small/truck_driver_2.jpg" alt="" width="92" height="68"></a>					<p>"I would like to thank you for your wonderful CDL practice test course.  I passed the General Knowledge CDL test beautifully, with no problems." <em>I.R., Gainesville, FL</em></p>
 					<br class="clear">
 				</div>
 								<br class="clear">
