--- a/p/pl/pla/playfg.com.html
+++ b/p/pl/pla/playfg.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the playfg.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216014205id_/http%3A//www.playfg.com/page.php%3Fprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the playfg.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616153333id_/http%3A//www.playfg.com/page.php%3Fprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>PlayFG.com - Privacy Policies</title>
@@ -8,8 +8,9 @@
 <meta name="keywords" content="PlayFG.com - Privacy Policies">
 <link rel="stylesheet" href="http://www.playfg.com/inc/styles.css" type="text/css">
 </head>
-<body><script type="text/javascript" src="http://www.playfg.com/inc/swfobject.js"></script>
-<table class="toptable"><tbody><tr><td>
+<body>
+<script type="text/javascript" src="/inc/swfobject.js"></script>
+<table class="toptable" cellspacing="0"><tbody><tr><td>
 	</td></tr><tr>
 		<td width="250">
 			<table class="topstyle">
@@ -25,7 +26,7 @@
 			google_ad_height = 90;
 			google_ad_format = "728x90_as";
 			google_ad_type = "text_image";
-			google_ad_channel = "7717560463";
+			google_ad_channel = "1465381698";
 			google_color_border = "fafafa";
 			google_color_bg = "fafafa";
 			google_color_link = "0000FF";
@@ -45,51 +46,79 @@
 </tbody></table>
 <table class="maintable">
 	<tbody><tr>
-		<td class="maintable_side_td"><table cellpadding="0" cellspacing="0" class="moduletable">
-	<tbody><tr>
-		<th valign="top"><b style="color:#cd5c5c;">Games Menu</b></th>
-	</tr>
-	<tr>
-		<td>
-		<table width="100%" border="0" cellpadding="0" cellspacing="0">
-			<tbody><tr align="left"><td style="padding:1px;"><a href="/games/action_games.html" class="mainmenu">Action Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/addicting_games.html" class="mainmenu">Addicting Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/adventure_games.html" class="mainmenu">Adventure Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/arcade_games.html" class="mainmenu">Arcade Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/barbie_games.html" class="mainmenu">Barbie Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/bike_games.html" class="mainmenu">Bike Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/board_games.html" class="mainmenu">Board Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/car_games.html" class="mainmenu">Car Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/card_games.html" class="mainmenu">Card Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/casino_games.html" class="mainmenu">Casino Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/dress_up_games.html" class="mainmenu">Dress Up Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/fashion_games.html" class="mainmenu">Fashion Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/fighting_games.html" class="mainmenu">Fighting Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/football_games.html" class="mainmenu">Football Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/funny_games.html" class="mainmenu">Funny Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/girl_games.html" class="mainmenu">Girl Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/kid_games.html" class="mainmenu">Kid Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/mario_games.html" class="mainmenu">Mario Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/pool_games.html" class="mainmenu">Pool Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/puzzle_games.html" class="mainmenu">Puzzle Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/racing_games.html" class="mainmenu">Racing Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/scary_games.html" class="mainmenu">Scary Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/shooting_games.html" class="mainmenu">Shooting Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/sports_games.html" class="mainmenu">Sports Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/tank_games.html" class="mainmenu">Tank Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/war_games.html" class="mainmenu">War Games</a></td></tr><tr align="left"><td style="padding:1px;"><a href="/games/word_games.html" class="mainmenu">Word Games</a></td></tr>			</tbody></table>
+		<td class="maintable_side_td">
+			<table cellpadding="0" cellspacing="0" class="moduletable">
+				<tbody><tr>
+					<th valign="top"><b style="color:#cd5c5c;">Games Menu</b></th>
+				</tr>
+				<tr>
+					<td>
+						<table width="100%" border="0" cellpadding="0" cellspacing="0">
+							<tbody><tr align="left"><td style="padding:1px;"><a href="/action-games.html" class="mainmenu">Action Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/addicting-games.html" class="mainmenu">Addicting Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/adventure-games.html" class="mainmenu">Adventure Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/arcade-games.html" class="mainmenu">Arcade Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/barbie-games.html" class="mainmenu">Barbie Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/bike-games.html" class="mainmenu">Bike Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/board-games.html" class="mainmenu">Board Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/car-games.html" class="mainmenu">Car Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/card-games.html" class="mainmenu">Card Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/casino-games.html" class="mainmenu">Casino Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/cooking-games.html" class="mainmenu">Cooking Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/dress-up-games.html" class="mainmenu">Dress Up Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/fashion-games.html" class="mainmenu">Fashion Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/fighting-games.html" class="mainmenu">Fighting Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/football-games.html" class="mainmenu">Football Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/funny-games.html" class="mainmenu">Funny Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/girl-games.html" class="mainmenu">Girl Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/kid-games.html" class="mainmenu">Kid Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/mario-games.html" class="mainmenu">Mario Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/pool-games.html" class="mainmenu">Pool Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/puzzle-games.html" class="mainmenu">Puzzle Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/racing-games.html" class="mainmenu">Racing Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/scary-games.html" class="mainmenu">Scary Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/shooting-games.html" class="mainmenu">Shooting Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/sports-games.html" class="mainmenu">Sports Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/tank-games.html" class="mainmenu">Tank Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/war-games.html" class="mainmenu">War Games</a></td></tr>
+							<tr align="left"><td style="padding:1px;"><a href="/word-games.html" class="mainmenu">Word Games</a></td></tr>
+						</tbody></table>
+					</td>
+				</tr>
+			</tbody></table>
+			<table cellpadding="0" cellspacing="0" class="moduletable">
+				<tbody><tr>
+					<th valign="top">Game Search</th>
+				</tr>
+				<tr>
+					<td align="center">
+						<form action="http://www.playfg.com/search.php" style="font-weight:bold;color:6f808a;font-size:13px;">
+						<input type="text" size="10" name="query" style="font:normal 17px verdana;background-color:e3e3e3;border-width:1px;border-color:7f9db9;border-style:solid;"> <input type="submit" value="Go" align="absmiddle">
+						</form>
+					</td>
+				</tr>
+			</tbody></table>
+			<p>
+			</p><center>
+			<script type="text/javascript"><!--
+			google_ad_client = "pub-2105863046651131";
+			google_ad_width = 120;
+			google_ad_height = 240;
+			google_ad_format = "120x240_as";
+			google_ad_type = "text_image";
+			google_ad_channel = "1146952281";
+			google_color_border = "DEDEDE";
+			google_color_bg = "fafafa";
+			google_color_link = "ba55d3";
+			google_color_text = "000000";
+			google_color_url = "000000";
+			//-->
+			</script>
+			<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+			</script></center>
 		</td>
-	</tr>
-</tbody></table>
-
-<table cellpadding="0" cellspacing="0" class="moduletable">
-	<tbody><tr>
-		<th valign="top">Game Search</th>
-	</tr>
-	<tr>
-		<td align="center">
-			<form action="http://www.playfg.com/search.php" style="font-weight:bold;color:6f808a;font-size:13px;">
-			<input type="text" size="10" name="query" style="font:normal 17px verdana;background-color:e3e3e3;border-width:1px;border-color:7f9db9;border-style:solid;"> <input type="submit" value="Go" align="absmiddle">
-			</form>
-		</td>
-	</tr>
-</tbody></table>
-<p>
-</p><center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-2105863046651131";
-google_ad_width = 120;
-google_ad_height = 240;
-google_ad_format = "120x240_as";
-google_ad_type = "text_image";
-google_ad_channel = "1146952281";
-google_color_border = "DEDEDE";
-google_color_bg = "fafafa";
-google_color_link = "ba55d3";
-google_color_text = "000000";
-google_color_url = "000000";
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></center>
-
-		</td>
-		<td class="maintable_main_td"><table class="navtable"><tbody><tr><td><a href="/">Oyunlar</a> » <h2>PlayFG.com - Privacy Policies</h2></td></tr></tbody></table>
+		<td class="maintable_main_td">
+<table class="navtable"><tbody><tr><td><a href="/">Oyunlar</a> » <h2>PlayFG.com - Privacy Policies</h2></td></tr></tbody></table>
 	<table border="0" cellpadding="10" cellspacing="0" width="100%">
 	<tbody><tr><td class="pagephp_td">
 	<b style="color:#b22222;">Personal Information</b><br>
@@ -124,102 +153,101 @@ google_color_url = "000000";
 	</p><p>
 	To report illegal content please: <a href="/page.php?contact" class="menu_links"><u>Contact Us</u></a><br>
 	</p></td></tr></tbody></table>
-	
-		</td>
-		<td class="maintable_side_td"><table cellpadding="0" cellspacing="0" class="moduletable">
-	<tbody><tr>
-		<th valign="top"><b style="color:#8b0000;">Top 10 Games</b></th>
-	</tr>
-	<tr>
-		<td>
-			<ul>
-			<li><a href="/games/arcade/tetris.html">tetris</a></li>
-<li><a href="/games/card/blackjack_fever.html">blackjack fever</a></li>
-<li><a href="/games/war/defence.html">defence</a></li>
-<li><a href="/games/arcade/gold_miner.html">gold miner</a></li>
-<li><a href="/games/arcade/space_invaders.html">space invaders</a></li>
-<li><a href="/games/sports/electro_air_hockey.html">electro air hockey</a></li>
-<li><a href="/games/arcade/pacman.html">pacman</a></li>
-<li><a href="/games/puzzle/memory_flash.html">memory flash</a></li>
-<li><a href="/games/war/3_foot_ninja.html">3 foot ninja</a></li>
-<li><a href="/games/puzzle/hexxagon.html">hexxagon</a></li>
-			</ul>
-		</td>
-	</tr>
-</tbody></table>
-<table cellpadding="0" cellspacing="0" class="moduletable">
-	<tbody><tr>
-		<th valign="top"><b style="color:#008000;">New Games</b></th>
-	</tr>
-	<tr>
-		<td>
-			<ul>
-			<li><a href="/games/puzzle/happy_pills.html">happy pills</a></li>
-<li><a href="/games/puzzle/memory_flash.html">memory flash</a></li>
-<li><a href="/games/puzzle/hexxagon.html">hexxagon</a></li>
-<li><a href="/games/puzzle/blobs.html">blobs</a></li>
-<li><a href="/games/puzzle/comicgen.html">comicgen</a></li>
-			</ul>
+			</td>
+		<td class="maintable_side_td">
+			<table cellpadding="0" cellspacing="0" class="moduletable">
+				<tbody><tr>
+					<th valign="top"><b style="color:#8b0000;">Top 10 Games</b></th>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+						<li><a href="/the-battle-game.html">the battle</a></li>
+<li><a href="/toy-car-racing-game.html">toy car racing</a></li>
+<li><a href="/bad-moon-rising-game.html">bad moon rising</a></li>
+<li><a href="/maggies-germy-roundup-game.html">maggies germy roundup</a></li>
+<li><a href="/tnt-runner-game.html">tnt runner</a></li>
+<li><a href="/automaton-game.html">automaton</a></li>
+<li><a href="/classroom-make-up-game.html">classroom make up</a></li>
+<li><a href="/spell-racer-game.html">spell racer</a></li>
+<li><a href="/red-plane-2-game.html">red plane 2</a></li>
+<li><a href="/undead-hunter-game.html">undead hunter</a></li>
+						</ul>
+					</td>
+				</tr>
+			</tbody></table>
+			<table cellpadding="0" cellspacing="0" class="moduletable">
+				<tbody><tr>
+					<th valign="top"><b style="color:#008000;">New Games</b></th>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+						<li><a href="/toy-car-racing-game.html">toy car racing</a></li>
+<li><a href="/atlantis-game.html">atlantis</a></li>
+<li><a href="/sea-strike-game.html">sea strike</a></li>
+<li><a href="/rapunzels-escape-game.html">rapunzels escape</a></li>
+<li><a href="/black-ops-korean-conflict-game.html">black ops korean conflict</a></li>
+						</ul>
+					</td>
+				</tr>
+			</tbody></table>
+			<p>
+			</p><center>
+			<script type="text/javascript"><!--
+			google_ad_client = "pub-2105863046651131";
+			google_ad_width = 160;
+			google_ad_height = 600;
+			google_ad_format = "160x600_as";
+			google_ad_channel = "7717560463";
+			google_color_border = "CCCCCC";
+			google_color_bg = "E6E6E6";
+			google_color_link = "CC0000";
+			google_color_text = "000000";
+			google_color_url = "008000";
+			//-->
+			</script><script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+			</center>
+				
+			<table cellpadding="0" cellspacing="0" class="moduletable">
+				<tbody><tr>
+					<th valign="top"><b style="color:#008000;">More Games</b></th>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+						<li><a href="http://www.shootinggames60.com" target="_blank">Hunting Games</a></li>
+<li><a href="http://www.gameswith.us" target="_blank">Dress Up Games</a></li>
+<li><a href="http://www.sweetdressupgames.com" target="_blank">Games for girls</a></li>
+<li><a href="http://www.gamesbarbie.net" target="_blank">Barbie Games</a></li>
+<li><a href="http://www.turbocargames.com" target="_blank">Car Games</a></li>
+<li><a href="http://www.diggygames.com" target="_blank">Play Games</a></li>
+<li><a href="http://www.58games.com" target="_blank">Free Online Games</a></li>
+<li><a href="http://www.topmakeovergames.com" target="_blank">Makeover Games</a></li>						</ul>
+					</td>
+				</tr>
+			</tbody></table>
 		</td>
 	</tr>
 </tbody></table>
 
-<p>
-</p><center>
-<script type="text/javascript"><!--
-google_ad_client = "pub-2105863046651131";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_channel = "7717560463";
-google_color_border = "CCCCCC";
-google_color_bg = "E6E6E6";
-google_color_link = "CC0000";
-google_color_text = "000000";
-google_color_url = "008000";
-//-->
-</script><script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-</center>
-		</td>
-	</tr>
-</tbody></table>
 <table class="bottomtable">
 	<tbody><tr>
 		<td height="8" bgcolor="#F2F2F2" colspan="2"></td>
 	</tr>
 	<tr>
-		<td background="/images/griarka.gif" align="right" width="40%">
-			<div id="eXTReMe"><a href="http://www.google.com" target="_blank">
-			<img src="http://t1.extreme-dm.com/i.gif" style="border: 0;" height="38" width="41" id="EXim" alt="eXTReMe Tracker"></a>
-			<script type="text/javascript"><!--
-			var EXlogin='playfg' // Login
-			var EXvsrv='s10' // VServer
-			EXs=screen;EXw=EXs.width;navigator.appName!="Netscape"?
-			EXb=EXs.colorDepth:EXb=EXs.pixelDepth;
-			navigator.javaEnabled()==1?EXjv="y":EXjv="n";
-			EXd=document;EXw?"":EXw="na";EXb?"":EXb="na";
-			EXd.write("<img src=http://e1.extreme-dm.com",
-			"/"+EXvsrv+".g?login="+EXlogin+"&amp;",
-			"jv="+EXjv+"&amp;j=y&amp;srw="+EXw+"&amp;srb="+EXb+"&amp;",
-			"l="+escape(EXd.referrer)+" height=1 width=1>");//-->
-			</script><img src="http://e1.extreme-dm.com/s10.g?login=playfg&amp;jv=n&amp;j=y&amp;srw=800&amp;srb=24&amp;l=" height="1" width="1"><noscript><div id="neXTReMe"><img height="1" width="1" alt=""
-			src="http://e1.extreme-dm.com/s10.g?login=playfg&amp;j=n&amp;jv=n" />
-			</div></noscript></div>
-		</td>
-		<td background="/images/griarka.gif" align="left" valign="top" width="60%"><br>
+		<td align="center" background="/images/griarka.gif" valign="top"><br>
 						<a href="/page.php?contact">contact us</a> | 
 						<a href="/page.php?privacy">privacy policy</a>
-						<br>Copyright © 2007 playfg.com. All Rights Reserved<br>Best Games: PlayFG.com - Privacy Policies<br><br>
+						<br>Copyright © 2007 - 2009 playfg.com. All Rights Reserved<br>: PlayFG.com - Privacy Policies<br><br>
 		</td>
 	</tr>
-</tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</tbody></table><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-265313-8";
 urchinTracker();
 </script>
-
 
 
 </body></html>
